# options-ai

./: .editorconfig  .env.example  README.md  app.py  pyproject.toml
static/: app.js  styles.css
templates/: chart.html
tests/: test_app.py
